--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,9 +63,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\ProjectileMovement.cs" />
-    <Compile Include="Assets\Scripts\SpeakerController.cs" />
-    <Compile Include="Assets\Scripts\SpeakerShooter.cs" />
+    <Compile Include="Assets\Scripts\Enemies\EnemyMovement.cs" />
+    <Compile Include="Assets\Scripts\Enemies\SpawnEnemy.cs" />
+    <Compile Include="Assets\Scripts\Player\ProjectileMovement.cs" />
+    <Compile Include="Assets\Scripts\Player\SpeakerController.cs" />
+    <Compile Include="Assets\Scripts\Player\SpeakerShooter.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/JAGGU/Desktop/COMP140/COMP140-Project/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
