--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Enemies\EnemyMovement.cs" />
+    <Compile Include="Assets\Scripts\Enemies\HitboxCheck.cs" />
     <Compile Include="Assets\Scripts\Enemies\SpawnEnemy.cs" />
     <Compile Include="Assets\Scripts\Player\ProjectileMovement.cs" />
     <Compile Include="Assets\Scripts\Player\SpeakerController.cs" />
