--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Scripts\Enemies\EnemyMovement.cs" />
     <Compile Include="Assets\Scripts\Enemies\HitboxCheck.cs" />
     <Compile Include="Assets\Scripts\Enemies\SpawnEnemy.cs" />
+    <Compile Include="Assets\Scripts\Player\HealthBar.cs" />
     <Compile Include="Assets\Scripts\Player\ProjectileMovement.cs" />
     <Compile Include="Assets\Scripts\Player\SpeakerController.cs" />
     <Compile Include="Assets\Scripts\Player\SpeakerShooter.cs" />
